# pw-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  README.md  flake.nix
.agent/workflows/: api-compatibility-validator.md  documentation-maintenance.md  release-preparation.md  tdd-feature-implementation.md
.agents/skills/: AGENTS.md  nu-scripts-migration.md
.claude/agents/: api-compatibility-validator.md  documentation-maintenance.md  release-preparation.md  tdd-feature-implementation.md
.github/workflows/: release.yml  test-debug.yml  test.yml
crates/cli/: .gitignore  Cargo.toml  SPEC.md
crates/cli/src/: args.rs  artifact_collector.rs  cli.rs  clutter.json  context.rs  context_store.rs  error.rs  lib.rs  logging.rs  main.rs  output.rs  project.rs  readable.rs  relay.rs  runtime.rs  session_broker.rs  session_helpers.rs  styles.rs  target.rs  test_sync.rs  testing.rs  types.rs  workspace.rs
crates/cli/src/args/: mod.rs  tests.rs
crates/cli/src/browser/: js.rs  mod.rs  session.rs
crates/cli/src/browser/session/: builder.rs  config.rs  context_factory.rs  mod.rs  page_selection.rs  shutdown.rs  types.rs
crates/cli/src/browser/session/features/: blocking.rs  downloads.rs  har.rs  mod.rs
crates/cli/src/cli/: mod.rs  tests.rs
crates/cli/src/commands/: agents.rs  agents_daemon.md  agents_page.md  agents_protect.md  agents_pw.md  agents_run.md  auth.rs  click.rs  connect.rs  console.rs  contract.rs  coords.rs  def.rs  dispatch.rs  elements.rs  eval.rs  exec_flow.rs  fill.rs  graph.rs  html.rs  mod.rs  navigate.rs  read.rs  registry.rs  run.rs  screenshot.rs  snapshot.rs  text.rs  wait.rs
crates/cli/src/commands/agents/: AGENTS.md  mod.rs
crates/cli/src/commands/auth/: AGENTS.md  listen.rs  mod.rs
crates/cli/src/commands/click/: mod.rs
crates/cli/src/commands/connect/: AGENTS.md  mod.rs  wsl.rs
crates/cli/src/commands/daemon/: mod.rs
crates/cli/src/commands/fill/: mod.rs
crates/cli/src/commands/har/: mod.rs
crates/cli/src/commands/init/: mod.rs  templates.rs
crates/cli/src/commands/navigate/: mod.rs
crates/cli/src/commands/page/: mod.rs
crates/cli/src/commands/page/console/: mod.rs
crates/cli/src/commands/page/coords/: mod.rs
crates/cli/src/commands/page/elements/: mod.rs
crates/cli/src/commands/page/eval/: mod.rs
crates/cli/src/commands/page/html/: mod.rs
crates/cli/src/commands/page/read/: mod.rs
crates/cli/src/commands/page/snapshot/: mod.rs
crates/cli/src/commands/page/text/: mod.rs
crates/cli/src/commands/protect/: mod.rs
crates/cli/src/commands/run/: AGENTS.md  dispatch.rs  mod.rs
crates/cli/src/commands/screenshot/: mod.rs
crates/cli/src/commands/session/: mod.rs
crates/cli/src/commands/tabs/: mod.rs
crates/cli/src/commands/test/: AGENTS.md  mod.rs
crates/cli/src/commands/wait/: mod.rs
crates/cli/src/context_store/: mod.rs  storage.rs  tests.rs  types.rs
crates/cli/src/daemon/: client.rs  mod.rs  protocol.rs  rpc.rs  server.rs
crates/cli/src/output/: mod.rs  tests.rs
crates/cli/src/protocol/: mod.rs
crates/cli/src/session/: connector.rs  descriptor.rs  descriptor_lifecycle.rs  manager.rs  mod.rs  outcome.rs  session_factory.rs  strategy.rs
crates/cli/src/session/connector/: wsl.rs
crates/cli/tests/: arg_detection.rs  batch_management.rs  click_navigation.rs  context_tracking.rs  e2e.rs  error_messages.rs  har_config.rs  no_context_cdp.rs  page_read.rs  protocol_v2.rs
crates/core/: Cargo.toml
crates/core/src/: accessibility.rs  action_options.rs  artifact.rs  assertions.rs  browser.rs  browser_context.rs  browser_type.rs  browser_type_windows_fix.rs  click.rs  cookie.rs  dialog.rs  download.rs  element_handle.rs  events.rs  file_payload.rs  frame.rs  handlers.rs  init.rs  keyboard.rs  launch_options.rs  lib.rs  locator.rs  mouse.rs  object_factory.rs  page.rs  playwright.rs  request.rs  response.rs  root.rs  route.rs  screenshot.rs  select_option.rs  tracing.rs  video.rs
crates/core/src/page/: eval.rs  input.rs  mod.rs  page_events.rs  routing.rs  screenshot.rs
crates/playwright-core/: Cargo.toml  README.md  build.rs
crates/playwright-core/src/: driver.rs  error.rs  lib.rs  server.rs
crates/playwright-core/src/protocol/: browser.rs  browser_type.rs  frame.rs  locator.rs  page.rs  request.rs  route.rs
crates/playwright-core/tests/: browser_launch_integration.rs  evaluate_test.rs  navigation_errors_test.rs  network_route_comprehensive_test.rs  network_route_cross_browser_test.rs  route_main_document_test.rs  select_upload_test.rs  test_server.rs
crates/pw-cli/: Cargo.toml  DAEMON-SPEC.md  SPEC.md
crates/pw-cli/src/: args.rs  artifact_collector.rs  cli.rs  clutter.json  context.rs  context_store.rs  error.rs  lib.rs  logging.rs  main.rs  output.rs  readable.rs  session_broker.rs  testing.rs  types.rs
crates/pw-cli/src/browser/: js.rs  mod.rs  session.rs
crates/pw-cli/src/commands/: auth.rs  click.rs  connect.rs  console.rs  coords.rs  elements.rs  eval.rs  fill.rs  html.rs  mod.rs  navigate.rs  read.rs  run.rs  screenshot.rs  session.rs  tabs.rs  text.rs  wait.rs
crates/pw-cli/src/commands/init/: mod.rs  templates.rs
crates/pw-cli/src/daemon/: server.rs
crates/pw-cli/tests/: arg_detection.rs  click_navigation.rs  context_tracking.rs  e2e.rs  no_context_cdp.rs
crates/pw-protocol/: Cargo.toml
crates/pw-protocol/src/: cookie.rs  options.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: channel.rs  channel_owner.rs  connection.rs  driver.rs  error.rs  lib.rs  playwright_server.rs  transport.rs
crates/runtime/src/connection/: mod.rs  object_store.rs  tests.rs
crates/runtime/src/transport/: mod.rs  tests.rs
docs/: e2e-testing-papercuts.md  pw-cli-development-strategy.md  refactor-plan.md  roadmap.md
extension/: README.md  init.js  manifest.json  popup.html  popup.js
extension/background/: Cargo.toml
extension/background/src/: lib.rs
nix/: default.nix  treefmt.nix
playwright/: .gitignore
scripts/: chatgpt.md  chatgpt.nu  diagnose-windows.ps1  extract_clutter_patterns.py  pw.nu  test-windows-local.ps1
(+203 files in other folders)
