[workspace]
members = ["crates/pw-cli", "crates/pw-core", "extension/background"]
default-members = ["crates/pw-core", "crates/pw-cli"]
resolver = "2"

[workspace.package]
version = "0.11.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Paul Adamson", "Albert O'Shea <albertoshea2@gmail.com>"]
repository = "https://github.com/Alb-O/pw-rs"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
