[package]
name = "pw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Playwright CLI for browser automation"
publish = false

[[bin]]
name = "pw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
dirs = "6.0"
futures = "0.3"
libc = "0.2"
pw = { package = "pw-rs", path = "../core" }
pw-protocol = { path = "../protocol" }
regex-lite = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
which = "7"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
toon = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[dev-dependencies]
tempfile = "3"

