[package]
name = "playwright-core"
version = "0.6.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "⚠️ DEPRECATED: Use playwright-rs instead. This crate has been merged into playwright-rs as of v0.7.0."

[lib]
doctest = false  # Disable doc-tests by default (run with: cargo test --doc)

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
parking_lot = "0.12"
base64 = "0.22"
regex = "1.10"
glob = "0.3"

[dev-dependencies]
anyhow = { workspace = true }
axum = "0.7.9"
tower = "0.5.2"
tower-http = "0.6.6"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "minwindef"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"
dirs = "5.0"
