[package]
name = "pw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Playwright CLI for browser automation"
publish = false

[[bin]]
name = "pw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
pw = { package = "pw-rs", path = "../pw-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

