[package]
name = "pw-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Playwright driver lifecycle, connection, and registry"

[lib]
doctest = false

[dependencies]
downcast-rs = "2.0"
futures-util = "0.3"
parking_lot = "0.12"
pw-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"

[build-dependencies]
dirs = "6.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "6.0"
