[package]
name = "pw-ext-background"
version = "0.0.1"
edition = "2021"
authors = ["pw-rs"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "WebSocket",
  "CloseEvent",
  "Event",
  "ErrorEvent",
  "console",
] }

[package.metadata.wasm-pack]
wasm-opt = false
